fixes bug in which distance between grid rows are too big

--- a/src/components/general/portfoliogridentry.css
+++ b/src/components/general/portfoliogridentry.css
@@ -25,7 +25,5 @@
     font-weight: bold;
     /* Makes the text bold */
     font-size: 20px;
-    color: white; /* Set text color to white */
-    /* Adjust the font size as needed */
-    /* Add any other styling to the text if needed */
+    color: rgba(255, 255, 255, 0.8); /* Caption text color */
   }
