--- a/src/components/home/Home.css
+++ b/src/components/home/Home.css
@@ -26,7 +26,6 @@
 .image-container {
   position: relative;
   width: 100%;
-  height: 100vh;
   /* Set the container to the full viewport height */
 }
 
